[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lmae"
dynamic = ["version"]
authors = [
    { name="Tajh Taylor", email="tajhlande@users.noreply.github.com" },
]
description = "LED Matrix Animation Engine"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["led", "matrix", "animation"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "Pillow>=10.2.0",
    "pygame>=2.5.1",
    "pilmoji>=2.0.3",
    "emoji>=2.6.0",
    # "rgbmatrix" # commented out because this package can't exist on macos
]

[project.urls]
Homepage = "https://github.com/tajhlande/lmae"
Issues = "https://github.com/tajhlande/lmae/issues"

[tool.setuptools.dynamic]
version = {attr = "lmae.VERSION"}
