[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lmae"
dynamic = ["version"]
authors = [
    { name="Tajh Taylor", email="tajhlande@users.noreply.github.com" },
]
description = "LED Matrix Animation Engine"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["led", "matrix", "animation"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Pillow>=10.2.0",
    "pygame>=2.5.1",
    "pilmoji>=2.0.3",
    "emoji>=2.6.0",
    "requests>=2.32.0",
    "munch>=4.0.0",
    "psutil>=7.0.0",
    "sqlite3-cache>=0.2.1",
    # rgbmatrix only builds on Linux (Pi); on macOS the code falls back to the virtual display
    "rgbmatrix; sys_platform == 'linux'",
]

[project.optional-dependencies]
test = [
    "freezegun>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/tajhlande/lmae"
Issues = "https://github.com/tajhlande/lmae/issues"

[tool.setuptools]
py-modules =  [ "lmae" ]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "lmae.VERSION"}

[tool.uv.sources]
rgbmatrix = { git = "https://github.com/hzeller/rpi-rgb-led-matrix" }
